RESOLVED FIXED 275824
[LBSE] Fix dynamic updating of lighting-color/flood-color/flood-opacity
https://bugs.webkit.org/show_bug.cgi?id=275824
Summary [LBSE] Fix dynamic updating of lighting-color/flood-color/flood-opacity
Rob Buis
Reported 2024-06-24 13:42:56 PDT
Fix dynamic updating of lighting-color/flood-color/flood-opacity.
Attachments
Rob Buis
Comment 1 2024-06-24 14:01:44 PDT
EWS
Comment 2 2024-06-25 03:16:18 PDT
Committed 280328@main (0eb86e157166): <https://commits.webkit.org/280328@main> Reviewed commits have been landed. Closing PR #30124 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-25 03:17:14 PDT
Note You need to log in before you can comment on or make changes to this bug.