[LBSE] Fix dynamic updating of lighting-color/flood-color/flood-opacity https://bugs.webkit.org/show_bug.cgi?id=275824

Reviewed by Nikolas Zimmermann and Said Abou-Hallawa.

Fix dynamic updating of lighting-color/flood-color/flood-opacity in the same way
as legacy. In particular:
- flood-color/flood-opacity style changes for feFlood and feDropShadow
- lighting-color style changes for feDiffuseLighting and feSpecularLighting.

* LayoutTests/platform/mac-sonoma-wk2-lbse-text/TestExpectations:
* Source/WebCore/rendering/svg/RenderSVGResourceFilterPrimitive.cpp:
(WebCore::RenderSVGResourceFilterPrimitive::filterPrimitiveElement const):
(WebCore::RenderSVGResourceFilterPrimitive::styleDidChange):
* Source/WebCore/rendering/svg/RenderSVGResourceFilterPrimitive.h:

Canonical link: https://commits.webkit.org/280328@main